--- a/earlybirds/index.html
+++ b/earlybirds/index.html
@@ -11,12 +11,23 @@
     <link rel="stylesheet" href="../css/newland.css">
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-TX62L9J');</script>
-        <!-- End Google Tag Manager -->
+    <script>
+    (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start': new Date().getTime(),
+            event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s),
+            dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TX62L9J');
+    </script>
+    <!-- End Google Tag Manager -->
 
 </head>
 
@@ -92,14 +103,6 @@
             </div>
     </section>
     <!-- / sec_product -->
-
-    <!-- sec_practics -->
-    <!-- <section class="sec sec_practics">
-        <div class="container">
-
-        </div>
-    </section> -->
-    <!-- / sec_practics -->
 
     <!-- sec_practics -->
     <section class="sec sec_practics media_wrapp" id="practics">
@@ -1075,7 +1078,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="InputPhone" class="text-yellow">Номер телефона</label>
-                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off"  required>
+                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
                             </div>
                             <div class="form-group">
                                 <label for="InputEmail" class="text-yellow">E-mail</label>
