--- a/vebinar/index.html
+++ b/vebinar/index.html
@@ -6,18 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Вебинар</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/intlTelInput.min.css">
     <link rel="stylesheet" href="../css/newland.css">
     <link rel="stylesheet" href="../css/vebinar.css">
+
+    <!-- Google Tag Manager -->
+    <script>
+    (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start': new Date().getTime(),
+            event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s),
+            dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TX62L9J');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TX62L9J" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
         <a class="navbar-brand" href="#"><img src="../img/nav/logo.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="../img/nav/burger.svg" alt="burger">
             </span>
@@ -75,33 +97,36 @@
                             холдингов - Константина Лашкевича</p>
                     </div>
                     <div class="card">
-                        <form class="b-form">
-                            <div class="form-group">
-                                <label for="InputName">Имя</label>
-                                <input type="text" class="form-control" id="InputName" aria-describedby="InputName"
-                                    placeholder="Введите ваше имя">
-                            </div>
-                            <div class="form-group">
-                                <label for="InputPhone">Номер телефона</label>
-                                <input type="tel" class="form-control" id="InputPhone" aria-describedby="InputPhone"
-                                    placeholder="Введите ваш телефон">
-                            </div>
-                            <div class="form-group">
-                                <label for="InputEmail">E-mail</label>
-                                <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
-                                    placeholder="Введите ваш Email ">
-                            </div>
-                            <button type="submit" class="btn btn-success w-100">Зарегистрироваться</button>
-                        </form>
+                            <form action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post" class="b-form">
+                                <div class="form-group">
+                                    <label for="InputName" class="text-yellow">Имя</label>
+                                    <input type="text" name="name" class="form-control" id="InputName" aria-describedby="InputName" placeholder="Введите ваше имя" minlength="2" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="InputPhone" class="text-yellow">Номер телефона</label>
+                                    <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="InputEmail" class="text-yellow">E-mail</label>
+                                    <input type="email" name="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Введите ваш Email " required>
+                                </div>
+                                <!-- Токен списка -->
+                                <!-- Получить API ID на: https://app.getresponse.com/campaign_list.html -->
+                                <input type="hidden" name="campaign_token" value="KTMBb" />
+                                <!-- Добавить подписчика в цикл на определенный день (по желанию) -->
+                                <input type="hidden" name="start_day" value="0" />
+                                <!-- Кнопка подписаться -->
+                                <button type="submit" class="btn btn-success w-100">Зарегистрироваться</button>
+                            </form>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
                         <img src="../img/lms_booster/konstantin_1.png" alt="konstantin_1">
                     </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- / sec_product -->
 
@@ -197,7 +222,7 @@
             <div class="text-center mt-3">
                 <img src="../img/icons/scroll-to.svg" alt="scroll-to">
             </div>
-        </div>
+            </div>
     </section>
     <!-- / sec_practics -->
 
@@ -278,29 +303,32 @@
                 <div class="col-md-5 text-center">
                     <img src="../img/vebinar/sec_form_master_class.svg" alt="sec_form_master_class">
                 </div>
-                <div class="col-md-7">
-                    <h2>Ты готов действовать и получать результаты? Запишись на мой живой мастер класс! </h2>
-                    <form class="b-form">
-                        <div class="form-group">
-                            <label for="InputName" class="text-white">Имя</label>
-                            <input type="text" class="form-control" id="InputName" aria-describedby="InputName"
-                                placeholder="Введите ваше имя">
-                        </div>
-                        <div class="form-group">
-                            <label for="InputPhone" class="text-white">Номер телефона</label>
-                            <input type="tel" class="form-control" id="InputPhone" aria-describedby="InputPhone"
-                                placeholder="Введите ваш телефон">
-                        </div>
-                        <div class="form-group">
-                            <label for="InputEmail" class="text-white">E-mail</label>
-                            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
-                                placeholder="Введите ваш Email ">
-                        </div>
-                        <button type="submit" class="btn btn-success btn-lg w-100">Да, я готов!</button>
-                    </form>
+                    <div class="col-md-7">
+                        <h2>Ты готов действовать и получать результаты? Запишись на мой живой мастер класс! </h2>
+                        <form action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post" class="b-form">
+                            <div class="form-group">
+                                <label for="InputName" class="text-yellow">Имя</label>
+                                <input type="text" name="name" class="form-control" id="InputName" aria-describedby="InputName" placeholder="Введите ваше имя" minlength="2" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputPhone" class="text-yellow">Номер телефона</label>
+                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputEmail" class="text-yellow">E-mail</label>
+                                <input type="email" name="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Введите ваш Email " required>
+                            </div>
+                            <!-- Токен списка -->
+                            <!-- Получить API ID на: https://app.getresponse.com/campaign_list.html -->
+                            <input type="hidden" name="campaign_token" value="KTMBb" />
+                            <!-- Добавить подписчика в цикл на определенный день (по желанию) -->
+                            <input type="hidden" name="start_day" value="0" />
+                            <!-- Кнопка подписаться -->
+                            <button type="submit" class="btn btn-success w-100">Да, я готов!</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- / sec_form_master_class -->
 
@@ -389,9 +417,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0"
-                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe>
+                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -403,17 +429,14 @@
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon"
-                                            style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
+                                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
                                         <h3>Евгений Маташ</h3>
                                         <p>Менеджер по работе с партнерами</p>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0"
-                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe>
+                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -425,17 +448,14 @@
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon"
-                                            style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
+                                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
                                         <h3>Евгений Маташ</h3>
                                         <p>Менеджер по работе с партнерами</p>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0"
-                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe>
+                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -456,31 +476,34 @@
                 <div class="col-md-5 text-center">
                     <img src="../img/vebinar/sec_form_master_class.svg" alt="sec_form_master_class">
                 </div>
-                <div class="col-md-7">
-                    <p class="upper-title">Зарегистрируйся на живой мастер-класс и узнай: </p>
-                    <h2>Как получить должность ТОПа в престижной компании и какие навыки для этого необходимы? </h2>
-                    <p class="under-title">Используй методику позитивного менеджмента от президента 3-х холдингов - Константина Лашкевича</p>
-                    <form class="b-form">
-                        <div class="form-group">
-                            <label for="InputName" class="text-white">Имя</label>
-                            <input type="text" class="form-control" id="InputName" aria-describedby="InputName"
-                                placeholder="Введите ваше имя">
-                        </div>
-                        <div class="form-group">
-                            <label for="InputPhone" class="text-white">Номер телефона</label>
-                            <input type="tel" class="form-control" id="InputPhone" aria-describedby="InputPhone"
-                                placeholder="Введите ваш телефон">
-                        </div>
-                        <div class="form-group">
-                            <label for="InputEmail" class="text-white">E-mail</label>
-                            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
-                                placeholder="Введите ваш Email ">
-                        </div>
-                        <button type="submit" class="btn btn-success btn-lg w-100">Да, я готов!</button>
-                    </form>
+                    <div class="col-md-7">
+                        <p class="upper-title">Зарегистрируйся на живой мастер-класс и узнай: </p>
+                        <h2>Как получить должность ТОПа в престижной компании и какие навыки для этого необходимы? </h2>
+                        <p class="under-title">Используй методику позитивного менеджмента от президента 3-х холдингов - Константина Лашкевича</p>
+                        <form action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post" class="b-form">
+                            <div class="form-group">
+                                <label for="InputName" class="text-yellow">Имя</label>
+                                <input type="text" name="name" class="form-control" id="InputName" aria-describedby="InputName" placeholder="Введите ваше имя" minlength="2" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputPhone" class="text-yellow">Номер телефона</label>
+                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputEmail" class="text-yellow">E-mail</label>
+                                <input type="email" name="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Введите ваш Email " required>
+                            </div>
+                            <!-- Токен списка -->
+                            <!-- Получить API ID на: https://app.getresponse.com/campaign_list.html -->
+                            <input type="hidden" name="campaign_token" value="KTMBb" />
+                            <!-- Добавить подписчика в цикл на определенный день (по желанию) -->
+                            <input type="hidden" name="start_day" value="0" />
+                            <!-- Кнопка подписаться -->
+                            <button type="submit" class="btn btn-success w-100">Да, я готов!</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- / sec_form_master_class -->
 
@@ -497,15 +520,13 @@
     <!-- / footer -->
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="../js/lightslider.min.js"></script>
+    <script src="../js/intlTelInput.min.js"></script>
     <script src="../js/main.js"></script>
 </body>
 
