--- a/lidmagnit/index.html
+++ b/lidmagnit/index.html
@@ -48,20 +48,21 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#course_programm">Програма курса</a>
+                    <a class="nav-link" href="#my_expertize">Мой опыт</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#reviews">Отзывы</a>
+                </li>
+
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
+                <a href="#master_class" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
             </form>
         </div>
     </nav>
@@ -96,7 +97,7 @@
     <!-- / sec_product -->
 
     <!-- sec_practics -->
-    <section class="sec sec_practics media_wrapp">
+    <section class="sec sec_practics media_wrapp" id="my_expertize">
         <div class="container">
             <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line" src="../img/abs_pic/dubl_line.svg">
@@ -145,7 +146,7 @@
     <!-- / sec_practics -->
 
     <!-- sec_what_results -->
-    <section class="sec sec_what_results media_wrapp bg-orange">
+    <section class="sec sec_what_results media_wrapp bg-orange" id="ya_nastavnik">
         <div class="container">
             <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line" src="../img/abs_pic/dubl_line.svg">
@@ -352,7 +353,7 @@
     <!-- / sec_checklist -->
 
     <!-- sec_video_review -->
-    <section class="sec sec_video_review bg-green">
+    <section class="sec sec_video_review bg-green" id="reviews">
         <div class="container">
             <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
@@ -439,7 +440,7 @@
     <!-- / sec_video_review -->
 
     <!-- sec_form_master_class -->
-    <section class="sec sec_form_master_class bg-blue">
+    <section class="sec sec_form_master_class bg-blue" id="master_class">
         <div class="container">
             <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
