--- a/vebinar/index.html
+++ b/vebinar/index.html
@@ -48,20 +48,20 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#course_programm">Програма курса</a>
+                    <a class="nav-link" href="#my_expertize">Мой опыт</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
+                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
+                    <a class="nav-link" href="#reviews">Отзывы</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
+                <a href="#master_class" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
             </form>
         </div>
     </nav>
@@ -145,7 +145,7 @@
                     <div class="media">
                         <div class="icon"></div>
                         <p>Ты постоянно вкалываешь, делаешь свою работу отлично и даже выполняешь обязательства
-                            руководителя, <b>но не видишь перспектив для роста</b></p>
+                            руководителя, но не видишь перспектив для роста</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -227,7 +227,7 @@
     <!-- / sec_practics -->
 
     <!-- sec_what_results -->
-    <section class="sec sec_what_results sec_what_results_1 media_wrapp bg-orange">
+    <section class="sec sec_what_results sec_what_results_1 media_wrapp bg-orange" id="ya_nastavnik">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical2" src="../img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic dubl_line" src="../img/abs_pic/dubl_line.svg">
@@ -296,7 +296,7 @@
     <!-- / sec_what_results -->
 
     <!-- sec_form_master_class -->
-    <section class="sec sec_form_master_class bg-blue">
+    <section class="sec sec_form_master_class bg-blue" id="master_class">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
             <div class="row align-items-center">
@@ -333,7 +333,7 @@
     <!-- / sec_form_master_class -->
 
     <!-- sec_what_will_be -->
-    <section class="sec sec_what_will_be sec_what_will_be_1 media_wrapp">
+    <section class="sec sec_what_will_be sec_what_will_be_1 media_wrapp" id="my_expertize">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic circle2" src="../img/abs_pic/circle.svg">
@@ -380,7 +380,7 @@
     <!-- / sec_what_will_be -->
 
     <!-- sec_video_review -->
-    <section class="sec sec_video_review sec_video_review_1">
+    <section class="sec sec_video_review sec_video_review_1" id="reviews">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
@@ -417,7 +417,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -436,7 +436,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -455,7 +455,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
